<resources>
    <string name="app_name">SelfOrgTest</string>
    <string name="URL">http://31.40.51.218:8081</string>
    <string name="language">RU</string>
    <string name="profile">PROFILE</string>
    <string name="go_test">GO TO TEST</string>
    <string name="auth">SIGN IN</string>
    <string name="nickname_hint">NICKNAME</string>
    <string name="password_hint">PASSWORD</string>
    <string name="reg">SIGN UP</string>
    <string name="questionNumb">Question №</string>
    <string name="question1">Load question...</string>
    <string name="answer1">Load answer...</string>
    <string name="answer2">Load answer...</string>
    <string name="answer3">Load answer...</string>
    <string name="answer4">Load answer...</string>
    <string name="answer5">Load answer...</string>
    <string name="answer6">Load answer...</string>
    <string name="answer7">Load answer...</string>
    <string name="resultTextHeader">Description of the result:</string>
    <string name="resultText">The description of the result is being retrieved...</string>
    <string name="thereWillBeSomethingHere">##</string>
    <string name="gender">Choose your gender:</string>
    <string name="history_attempts">History of attempts</string>
    <string name="name_user">Username:</string>
    <string name="age">Age:</string>
    <string name="gender_show">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="auth_fail">Authorization failed. Please try again.</string>
    <string name="reg_succ">User registered successfully.</string>
    <string name="reg_fail">Registration failed.</string>
    <string name="history_empty">Attempt history is empty</string>
    <string name="history_fail">Failed to get the history of attempts</string>
    <string name="greetings">Welcome! <br /> This app will help you assess your level of self-organization.</string>
    <string name="reg_warn_1">Nickname must be at least 4 characters long</string>
    <string name="reg_warn_2">Nickname must have a maximum of 30 characters</string>
    <string name="reg_warn_3">Password must be at least 4 characters long</string>
    <string name="reg_warn_4">Gender must be marked</string>
    <string name="reg_warn_5">Date of birth entered incorrectly</string>
    <string name="btnToMenu">Menu</string>
    <string name="btnPrev">Prev. factor</string>
    <string name="btnNext">The next factor</string>
    <string name="factorHeadTable">Factor</string>
    <string name="scoreHeadTable">Point</string>
    <string name="middleHeadTable">Average</string>
    <string name="generalTable">General indicator</string>
    <string name="planTable">Plannedness</string>
    <string name="celeTable">Purposefulness</string>
    <string name="nastTable">Persistence</string>
    <string name="fiksTable">Fixation</string>
    <string name="samoTable">Self-organization</string>
    <string name="orieTable">Present orientation</string>

    <string name="generalHeader">General indicator of self-organization</string>
    <string name="planHeader">Consistency indicator</string>
    <string name="celeHeader">Indicator of purposefulness</string>
    <string name="nastHeader">Persistence indicator</string>
    <string name="fiksHeader">Fixation indicator</string>
    <string name="samoHeader">Self-organization indicator</string>
    <string name="orieHeader">Present orientation indicator</string>

    <string name="deskHeaderHigh">Considered a high rate</string>
    <string name="deskHeaderLow">Considered low</string>
    <string name="deskHeaderMiddle">It is considered an average indicator (range</string>
    <string name="changeNickname">CHANGE</string>
    <string name="timer">00:00</string>
    <string name="nicknameNow">Enter your new nickname: </string>
    <string name="nicknameChangeSucc">Nickname has been successfully updated to: </string>
    <string name="nicknameChangeFailed">Nickname change failed.</string>
    <string name="goWithoutAuth">Take the test without authorization</string>
    <string name="hist">Your attempts:</string>
</resources>